--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -116,6 +116,10 @@ body {
 	color: $main-text-color;
 }
 
+.btn {
+	font-size: 15px;
+}
+
 @mixin btn-access {
 	background: #fff;
 	border: 1px solid $gray-border-color;
@@ -1469,7 +1473,74 @@ div.filesTable .ui-paginator {
 			}
 		}
 	} 
+}
 
+/* Dataset/Dataverse preview */
+
+#breadcrumbNavBlock {
+	margin-bottom: 35px;
+
+	.breadcrumbCarrot {
+		margin: 0 12px;
+	}
+
+	.breadcrumbActive {
+		font-weight: normal;
+	}
+}
+
+#topDatasetBlock #actionButtonBlock {
+	margin-left: 0;
+	width: 100%;
+}
+
+#title-block {
+	margin-top: 20px;
+	margin-bottom: 32px;
+
+	.title-preview-icon-block {
+		.icon-dataset {
+			line-height: 0.8em;
+		}
+
+		+ .col-xs-11 {
+			padding-left: 15px;
+		}
+	}
+
+	#title {
+		font-size: 26px;
+		font-weight: normal;
+		line-height: 30px;
+	}
+}
+
+.citation-block .alert.alert-info.bg-citation {
+	padding: 10px 26px 10px 24px;
+
+	.citation-download {
+		padding-bottom: 3.5px;
+	}
+
+	.citation-standards {
+		margin-bottom: -4px;
+	}
+}
+
+.metadata-panel-body {
+	padding: 44px 31px 48px 31px;
+}
+
+.glyphicon.glyphicon-question-sign.tooltip-icon {
+	margin-left: 4px;
+}
+
+#datasetForm\:tabView\:versionsTab td {
+	padding: 14px 20px;
+}
+
+.ui-datatable.ui-widget.no-alternating-row-colors .ui-datatable-odd td {
+	background: #fff;
 }
 
 /* Modal */
