--- a/dataverse-webapp/src/main/webapp/resources/css/structure.css
+++ b/dataverse-webapp/src/main/webapp/resources/css/structure.css
@@ -674,6 +674,7 @@ table.ui-picklist div.ui-picklist-filter-container {padding-bottom:5px;}
 
 .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
 .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}
+.col-sm-9 > .select-scroll-block {margin: 4px 10px;}
 
 #contentTabs .ui-tabs .ui-tabs-panel {padding-left:0; padding-right:0;}
 
