Changed width to relative to font size

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -1115,6 +1115,10 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 	}
 }
 
+.files-table-right {
+	width: 8em;
+}
+
 /* AJAX loading spinner */
 
 #ajaxStatusPanel_start img {
