--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -1127,8 +1127,14 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 	@include link-color;
 }
 
-.ui-datatable-tablewrapper .col-manage-action .button-block div.btn-group {
-	margin: 0 5px 0 1px;
+.ui-datatable-tablewrapper {
+	.col-manage-action .button-block div.btn-group {
+		margin: 0 5px 0 1px;
+	}
+
+	.ui-sortable-handle a.btn.btn-default + a.btn.btn-default {
+		margin-left: 0.3em;
+	}
 }
 
 .panel-default > .panel-heading {
@@ -1203,6 +1209,14 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 
 .files-table-right {
 	width: 8em;
+}
+
+#form\:undoLastReorder {
+	margin-bottom: 1em;
+
+	button {
+		margin-left: 1em;
+	}
 }
 
 /* AJAX loading spinner */
