Changed selector from ID to class

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -1142,7 +1142,7 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 		margin: 0 5px 0 1px;
 	}
 
-	.ui-sortable-handle a.btn.btn-default + a.btn.btn-default {
+	.change-order-buttons-cell a.btn.btn-default + a.btn.btn-default {
 		margin-left: 0.3em;
 	}
 }
@@ -1221,7 +1221,7 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 	width: 8em;
 }
 
-#form\:undoLastReorder {
+.undo-last-reorder-panel {
 	margin-bottom: 1em;
 
 	button {
