--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -1018,6 +1018,14 @@ div[id$="notifications"].ui-tabs-panel {
 
 /* Tables */
 
+.visuallyhidden {
+	position: absolute;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	height: 1px; width: 1px;
+	margin: -1px; padding: 0; border: 0;
+}
+
 .ui-datatable.ui-widget, .ui-autocomplete-panel {
 	.ui-widget-header {
 		background: none;
