--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -21,6 +21,7 @@ $gray-border-color: #e8e8e8;
 
 /* RepOD color scheme */
 
+/*
 $main-color: #0086bc !default;
 $icon-color: #2ba7df !default;
 $link-color: #043e58 !default;
@@ -33,6 +34,7 @@ $main-logo: "img/logo-repod.svg" !default;
 $primefaces-main: "img/primefaces-main-repod.png" !default;
 $dataverse-icon: "img/dataverse-icon-repod.svg" !default;
 $ajax_spinner_filter: saturate(2) !default;
+*/
 
 /* MX-RDR color scheme */
 
@@ -51,9 +53,9 @@ $dataverse-icon: "img/dataverse-icon-mxrdr.svg";
 $ajax_spinner_filter: hue-rotate(140deg) saturate(2);
 */
 
+
 /* RDS color scheme */
 
-/*
 $main-color: #ab2000;
 $icon-color: #f6921e;
 $link-color: #6a1211;
@@ -61,12 +63,11 @@ $border-color: #f6921e;
 $search-result-desc-color: #fff5ea;
 $table-row-hover: #f7e8d8;
 $table-row-highlight: #ffd7af;
-$focus-color: #de8800;
+$focus-color: #0086bc;
 $main-logo: "img/logo-rds.svg";
 $primefaces-main: "img/primefaces-main-rds.png";
 $dataverse-icon: "img/dataverse-icon-rds.svg";
 $ajax_spinner_filter: hue-rotate(170deg) saturate(2);
-*/
 
 /**
 	Custom font
@@ -282,7 +283,7 @@ body {
 @mixin link-color {
 	color: $link-color;
 	
-	&:hover {
+	&:hover, &:focus {
 		color: $main-color;
 	}
 }
@@ -1400,24 +1401,6 @@ $navbar-height: 6.8em;
 	}
 }
 
-@media screen and (max-width: $screen-xs-max) {
-	#navbarFixed .navbar-brand {
-		margin-left: 0.666em;
-	}
-	.navbar-default #topNavBar .pull-right {
-		width: 100%;
-	}
-}
-@media screen and (min-width: $screen-sm-min) {
-	.navbar-default #topNavBar .navbar-nav {
-		display: table-cell;
-		vertical-align: middle;
-		float: none;
-		height: $navbar-height;
-
-	}
-}
-
 .navbar-default .navbar-toggle {
 	margin: 1.8em;
 
@@ -1437,34 +1420,39 @@ $navbar-height: 6.8em;
 	margin: 8px;
 }
 
-/* Footer */
+@media screen and (max-width: $screen-xs-max) {
+	$navbar-height-mobile: 4.65em;
 
-#footer {
-	position: static;
-	height: auto;
-	padding-bottom: 0;
+	#navbarFixed .navbar-brand {
+		height: $navbar-height-mobile;
+		margin-left: 0.666em;
 
-	.footer-links .row {
-		border-top: 1px solid $gray-border-color;
-		margin: 0;
-		padding-top: 1em;
-		font-size: 0.867em;
-
-		div[class^="col-"] {
-			padding: 0;
-
-			p span {
-				border-left: 1px solid $gray-border-color;
-				margin-left: 1em;
-				padding-left: 1em;
+		#site-logo {
+			top: 0.288em;
+			left: 0.55em;
+			font-size: 3.333em;
+	
+			& + div {
+				padding-left: 4em;
 			}
 		}
 	}
-}
+	.navbar-default {
+		.navbar-toggle {
+			margin: 0.8em;
+		}
 
-@media screen and (max-width: $screen-xs-max) {
-	#footer div[class^="col-"] {
-		text-align: center;
+		#topNavBar .pull-right {
+			width: 100%;
+		}
+	}
+}
+@media screen and (min-width: $screen-sm-min) {
+	.navbar-default #topNavBar .navbar-nav {
+			display: table-cell;
+			vertical-align: middle;
+			float: none;
+			height: $navbar-height;
 	}
 }
 
@@ -1512,6 +1500,7 @@ $navbar-height: 6.8em;
 }
 
 div.panelSearchForm input.search-input {
+	max-width: calc(100% + 1em);
 	line-height: 23px;
 }
 
