--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -978,6 +978,12 @@ input.fancy-checkbox[type=checkbox] {
 /* Tabs */
 
 .ui-tabs {
+	/* Fix modal issues on the new PrimeFaces version 8.0 */
+	-moz-transform: none;
+	-o-transform: none;
+	-webkit-transform: none;
+	transform: none;
+
 	&.ui-tabs-top > .ui-tabs-nav {
 		padding: 0.2em 0 0 0;
 	}
