--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -2364,3 +2364,7 @@ div.ui-dialog.largePopUp {
 .consent-label {
 	padding-left: 1% !important;
 }
+
+.no-bottom-border {
+    border-bottom: none !important;
+}
