Closes #719: cr response

--- a/dataverse-webapp/src/main/webapp/WEB-INF/templates/dataset/inputRenderer/controlledVocabInputField.xhtml
+++ b/dataverse-webapp/src/main/webapp/WEB-INF/templates/dataset/inputRenderer/controlledVocabInputField.xhtml
@@ -16,7 +16,7 @@
     </p:outputLabel>
     
     <p:selectOneMenu id="singleVocabularySelect"
-                     value="#{datasetField.singleControlledVocabularyValue}" converter="controlledVocabularyValueConverter" style="width: auto !important; max-width:100%; min-width:200px;" styleClass="form-control primitive SELECT TESTTEST"
+                     value="#{datasetField.singleControlledVocabularyValue}" converter="controlledVocabularyValueConverter" style="width: auto !important; max-width:100%; min-width:200px;" styleClass="form-control primitive"
                      rendered="#{!datasetField.datasetFieldType.allowMultiples}">
         <f:selectItem itemLabel="#{bundle.select}" itemValue="" noSelectionOption="true"/>
         <f:selectItems value="#{datasetField.datasetFieldType.controlledVocabularyValues}" var="cvv" itemLabel="#{cvv.localeStrValue}" itemValue="#{cvv}" />
