--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -3521,7 +3521,7 @@ div.ui-dialog.largePopUp {
 
 /* Definitions */
 
-body {
+body.high-contrast-yellow-on-black {
 	@include high-contrast-template();
 }
 
