Fix merge errors

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -527,6 +527,7 @@ input:disabled {
 
 div.ui-selectonemenu.form-control {
 	padding: 1px 0;
+}
 
 .ui-selectcheckboxmenu .ui-selectcheckboxmenu-multiple-container  {
     padding-right: 30px; /* same as primefaces ui-selectcheckboxmenu-trigger width */
