Fix minor mistake

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -51,8 +51,8 @@ $main-logo: "img/logo-mxrdr.svg";
 $primefaces-main: "img/primefaces-main-mxrdr.png";
 $dataverse-icon: "img/dataverse-icon-mxrdr.svg";
 $ajax_spinner_filter: hue-rotate(140deg) saturate(2);
-$dataverse-icon-mono: "\f202" !default;
-$main-logo-mono: "\f204" !default;
+$dataverse-icon-mono: "\f202";
+$main-logo-mono: "\f204";
 */
 
 
@@ -71,8 +71,8 @@ $main-logo: "img/logo-rds.svg";
 $primefaces-main: "img/primefaces-main-rds.png";
 $dataverse-icon: "img/dataverse-icon-rds.svg";
 $ajax_spinner_filter: hue-rotate(170deg) saturate(2);
-$dataverse-icon-mono: "\f201" !default;
-$main-logo-mono: "\f203" !default;
+$dataverse-icon-mono: "\f201";
+$main-logo-mono: "\f203";
 */
 
 /**
