--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme.scss
@@ -3369,7 +3369,7 @@ div.ui-dialog.largePopUp {
 				color: $contrast-link-color;
 
 				&:hover, &:active, &:hover {
-					color :$contrast-foreground-color
+					color: $contrast-foreground-color;
 				}
 			}
 
