--- a/dataverse-webapp/src/main/webapp/WEB-INF/templates/textEditor.xhtml
+++ b/dataverse-webapp/src/main/webapp/WEB-INF/templates/textEditor.xhtml
@@ -9,7 +9,7 @@
 >
     <p:textEditor id="textEditor"
                   value="#{editorValue}"
-                  secure="false"
+                  secure="true"
                   height="200"
                   style="margin-bottom:10px"
                   placeholder="#{editorWatermark}"
