Another bug bites the dust

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -654,6 +654,9 @@ div.ui-selectonemenu.form-control {
 .ui-selectcheckboxmenu-label-container {
 	display: inline-block;
 }
+.ui-selectoneradio.inline-labels label {
+    display: inline;
+}
 
 div.field-add-delete {
 	margin-left: -1em;
